--- a/CLI/CLI.csproj
+++ b/CLI/CLI.csproj
@@ -7,6 +7,7 @@
     <ProjectReference Include="..\Core\Abilities\Abilities.csproj" />
     <ProjectReference Include="..\Utilities\Utilities.csproj" />
     <ProjectReference Include="..\Core\Units\Units.csproj" />
+    <ProjectReference Include="..\Core\Services\Services.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
