--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -25,4 +25,14 @@
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Models\Models.csproj" />
+    <ProjectReference Include="..\Core\Interfaces\Interfaces.csproj" />
+    <ProjectReference Include="..\Core\GameLogic\GameLogic.csproj" />
+    <ProjectReference Include="..\Core\Services\Services.csproj" />
+    <ProjectReference Include="..\Core\Units\Units.csproj" />
+    <ProjectReference Include="..\Core\Abilities\Abilities.csproj" />
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
+  </ItemGroup>
 </Project>
